fix playing card's face not showing

--- a/src/asobann/app/static/game.css
+++ b/src/asobann/app/static/game.css
@@ -114,6 +114,7 @@ body {
 
 .component span.component_text {
     width: 100%;
+    position: relative;
 }
 
 .component button.component_text {
